# SalesSystem-1

./: CMakeLists.txt  sale.cpp
sale/: saleStruct.h  salesManager.cpp  stockManager.cpp
sqlite/: database.cpp  database.h
